# rules_rust

cargo/private/cargo_build_script_runner/: bin.rs  cargo_manifest_dir.rs
rust/: toolchain.bzl
rust/private/: incremental.bzl  rust.bzl  rustc.bzl
rust/settings/: BUILD.bazel  settings.bzl
test/chained_direct_deps/: mod1.rs
test/process_wrapper/: BUILD.bazel
test/unit/incremental/: BUILD.bazel  incremental_test_suite.bzl
test/unit/pipelined_compilation/: BUILD.bazel  pipelined_compilation_test.bzl  svh_mismatch_demo_test.sh  wrap.bzl
test/unit/pipelined_compilation/nondeterministic_macro/: lib.rs
test/unit/pipelined_compilation/svh_mismatch/: svh_mismatch_consumer.rs  svh_mismatch_lib.rs  svh_mismatch_nondeterministic_macro.rs  svh_mismatch_test.rs
test/unit/pipelined_compilation/svh_test/: bin.rs  leaf_lib.rs  mid_lib.rs  top_lib.rs
util/process_wrapper/: BUILD.bazel  main.rs  options.rs  output.rs  rustc.rs  util.rs  worker.rs  worker_pipeline.rs  worker_protocol.rs  worker_sandbox.rs
util/process_wrapper/private/: bootstrap_process_wrapper.cc
